Updated git endponit.

--- a/bower.json
+++ b/bower.json
@@ -11,5 +11,5 @@
     "port"
   ],
   "license": "MIT",
-  "homepage": "http://www.michael-streb.de/projects/viewport"
+  "homepage": "http://www.michael-streb.de/projects/advanced-viewport"
 }
